# optimization-engine

./: .gitignore  .travis.yml  .~lock.logo.odp#  404.html  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  Doxyfile  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  appveyor.yml  blog.html  help.html  index.html  logo.odp  logo2.odp  sitemap.xml  users.html
.github/: pull_request_template.md
blog/: archive.html  atom.xml  feed.xml  index.html  rss.xml
ci/: install-sphinx.sh  install.sh  script.sh  sphinx-documentation.sh
css/: custom.css~  jupyter_notebook_config.py  main.css  main.css~
design/: .gitignore  fbs.dia  flow-0.dia  flow-4-lipschitz.dia  flow-5-lbfgs.dia  flow-7-linesearch.dia  flow-8-no-linesearch.dia  ocp_class_diagram.puml  panoc.dia  structure.dia
docker/: CHANGELOG.md  Dockerfile  README.md  example.ipynb  start_jupyter_notebook.sh
docs/: algorithm.html  algorithm.md  cite_open.html  cite_open.md  contributing.html  contributing.md  contributing.mdx  doc1.html  doc2.html  doc3.html  doc5.html  docker.html  docker.md  example-nav.html  example-nav.md  example-nmpc.html  example-nmpc.md  example_bnp_py.html  example_bnp_py.md  example_estimation_py.html  example_estimation_py.md  example_invpend_py.html  example_invpend_py.md  example_navigation_py.html  example_navigation_py.md  example_navigation_py.mdx  example_navigation_ros.html  example_navigation_ros_codegen.html  example_navigation_ros_codegen.md  example_rosenbrock_py.html  example_rosenbrock_py.md  example_tanks_py.html  example_tanks_py.md  faq.html  faq.md  installation.html  installation.md  irc.html  irc.md  matlab-api.html  (+49 more)
en/: help.html  index.html  index.js~  users.html
examples/: README.md  abs_nan.rs  alm_pm.rs  homotopy.rs  panoc_ex1.rs  panoc_ex2.rs
help/: index.html
icasadi/: Cargo.toml  README.md  build.rs
matlab/: CHANGELOG.md  OpEnTcpOptimizer.m  README.md  bfgs.m  casadi_generate_c_code.m  consume_parametric_optimizer.m  costgrad.m  estimate_lip.m  example.m  kill_parametric_optimizer.m  lbfgs.m  matlab_open_root.m  nmpc_open_alm_constraints.mat  open_build_config.m  open_generate_code.m  open_matlab_interface_example.m  run_parametric_optimizer.m  setup_open.m  test_init_panoc.m  untitled.m  untitled2.m  untitled3.m
open-clib/: Cargo.toml  build.rs  open_clib.h  open_clib.hpp
open-clib/src/: lib.rs
open-codegen/: .coverage  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README.txt  VERSION  main.py  publish-pypi.sh  pyproject.toml  setup.py
open-codegen/icasadi/: Cargo.toml
open-codegen/opengen/: __init__.py  definitions.py  main.py  ocp_config.py
open-codegen/opengen/builder/: __init__.py  optimizer_builder.py  problem.py  problem_builder.py  rectangle.py  ros_builder.py  set_y_calculator.py
open-codegen/opengen/config/: __init__.py  build_config.py  meta.py  ros_config.py  solver_config.py  tcp_server_config.py
open-codegen/opengen/constraints/: __init__.py  affine_space.py  ball1.py  ball2.py  ball_inf.py  cartesian.py  constraint.py  finite_set.py  halfspace.py  no_constraints.py  rectangle.py  set_y_calculator.py  simplex.py  soc.py  sphere2.py  zero.py
open-codegen/opengen/functions/: __init__.py  fabs.py  fmax.py  fmin.py  is_symbolic.py  norm2.py  norm2_squared.py  rosenbrock.py  sign.py  sq_dist_to_soc.py
open-codegen/opengen/icasadi/: Cargo.toml  README.md  build.rs
open-codegen/opengen/ocp/: __init__.py  builder.py  constraint_utils.py  dynamics.py  ocp_build_interface.py  ocp_builder.py  optimal_control_problem.py  optimizer_formulations.py  parameter.py  problem.py  set_exclusion.py  solution.py  type_enums.py
open-codegen/opengen/tcp/: __init__.py  optimizer_tcp_manager.py  solver_error.py  solver_response.py  solver_status.py
open-codegen/opengen/templates/: casadi_memory.h.template  example_cmakelists.template  example_optimizer_c_bindings.c.template  icallocator.c.template  icasadi_cargo.toml.template  icasadi_config.h.template  icasadi_lib.rs.template  interface.c.template  optimizer.rs  optimizer.rs.jinja  optimizer.rs.template  optimizer_build.rs  optimizer_build.rs.template  optimizer_cargo.toml  optimizer_cargo.toml.jinja  optimizer_cargo.toml.template  optimizer_cinterface.rs.template  tcp_server.rs.template  tcp_server_cargo.toml.template
open-codegen/opengen/templates/c/: example_cmakelists.txt  example_optimizer_c_bindings.c  optimizer_cinterface.rs  optimizer_cinterface.rs.jinja
open-codegen/opengen/templates/icasadi/: casadi_memory.h  icasadi_lib.rs  interface.c
open-codegen/opengen/templates/python/: cargo_config  python_bindings.rs  python_bindings_cargo.toml
open-codegen/opengen/templates/ros/: CMakeLists.txt  OptimizationParameters.msg  OptimizationResult.msg  README.md  open_optimizer.cpp  open_optimizer.hpp  open_optimizer.launch  open_params.yaml  package.xml
open-codegen/opengen/templates/ros2/: CMakeLists.txt  OptimizationParameters.msg  OptimizationResult.msg  README.md  open_optimizer.cpp  open_params.yaml
open-codegen/opengen/templates/tcp/: tcp_server.rs  tcp_server_cargo.toml
open-codegen/opengen/test/: benchmark_open.py  prepare_benchmarks.py  test.py  test_2_solvers.c  test_constraints.py
open-codegen/templates/: icasadi_config.h  icasadi_config.h.template  optimizer.rs.template  optimizer_cargo.toml.template  output.rs  xtmpl.rs
open-codegen/test/: README.md  benchmark_open.py  test.py  test_constraints.py  test_ocp.py  test_raspberry_pi.py  test_ros2.py
python/: .gitignore  CHANGELOG.md  caolan.py  main.py  pyproject.toml
python/opengen/templates/ros/: CMakeLists.txt  OptimizationParameters.msg  OptimizationResult.msg  README.md  open_optimizer.cpp  package.xml
python/opengen/templates/ros2/: CMakeLists.txt  OptimizationResult.msg  README.md  open_optimizer.cpp  open_optimizer.hpp  open_optimizer.launch.py  package.xml
rust/: CHANGELOG.md  Cargo.toml  Makefile.toml
sphinx/: index.html
src/: buffer.rs  cholesky_factorizer.rs  constraints.rs  contraints.rs  lbfgs.rs  lib.rs  lipschitz.rs  main.rs  (+6 more)
test/icasadi_test/: Cargo.toml
test/icasadi_test/src/: lib.rs
(+574 files in other folders)
