[package]
authors = ["Emil Fresk <emil.fresk@gmail.com>", "Pantelis Sopasakis (https://alphaville.github.io)"]
categories = ["embedded", "nonlinear", "optimization"]
keywords = ["embedded", "optimization", "solver"]
description = "A framework for embedded nonconvex optimization"
documentation = "https://alphaville.github.io/optimization-engine/"
license = "MIT OR Apache-2.0"
readme = "README.md"
name = "optimization_engine"
homepage = "https://alphaville.github.io/optimization-engine/"
repository = "https://github.com/alphaville/optimization-engine"
version = "0.2.0"

[dependencies]
num = "0.2.0"
lbfgs = "0.1.0"

[dev-dependencies]
unit_test_utils = "0.1.3"


[badges]
travis-ci = { repository = "alphaville/optimization-engine", branch = "master" }
maintenance = { status = "actively-developed" }