[package]
name = "open-clib"
version = "0.1.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
optimization_engine = {path = "../"}
icasadi = {path = "../icasadi"}

[build-dependencies]
cbindgen = "0.8.0"

[lib]
crate-type = ["staticlib", "cdylib"]
