[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "opengen"
dynamic = ["version"]
description = "Optimization Engine Code Generator"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
authors = [
  { name = "Pantelis Sopasakis", email = "xzu.trustful191@passinbox.com" },
  { name = "Emil Fresk" },
]
license = { text = "MIT License" }
keywords = [
  "optimization",
  "code-generation",
  "optimal-control",
  "mpc",
  "nmpc",
  "embedded",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
  "jinja2>=3.1,<4",
  "casadi>=3.6,<4",
  "pyyaml>=6,<7",
  "retry>=0.9,<1",
  "numpy>=1.26,<3",
]

[project.urls]
Homepage = "https://github.com/alphaville/optimization-engine"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[tool.setuptools.packages.find]
include = ["opengen*"]
