[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "opengen"
dynamic = ["version"]
description = "Optimization Engine Code Generator"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
  { name = "Pantelis Sopasakis", email = "xzu.trustful191@passinbox.com" },
  { name = "Emil Fresk" },
]
license = "MIT OR Apache-2.0"
keywords = [
  "optimization",
  "code-generation",
  "optimal-control",
  "mpc",
  "nmpc",
  "embedded",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
  "jinja2>=3.1,<4",
  "casadi>=3.6,<4",
  "pyyaml>=6,<7",
  "retry>=0.9,<1",
  "numpy>=1.26,<3",
]

[project.urls]
Homepage = "https://github.com/alphaville/optimization-engine"
Documentation = "https://alphaville.github.io/optimization-engine/"
Repository = "https://github.com/alphaville/optimization-engine"
Changelog = "https://github.com/alphaville/optimization-engine/blob/master/open-codegen/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1",
  "twine>=5",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[tool.setuptools.packages.find]
include = ["opengen*"]
