[package]
authors = ["Pantelis Sopasakis"]
name = "icasadi_test"
categories = ["api-bindings", "no-std", "science", "science::robotics", "simulation"]
keywords = ["casadi", "optimization", "interface"]
description = "Rust interface to CasADi functions (for testing purposes only)"
documentation = "https://docs.rs/icasadi"
license = "MIT"
readme = "README.md"
version = "0.0.3"
edition = "2018"

# NOTE: It is preferable to link to specific versions of the dependencies
# in order to avoid breaking changes. All dependencies below are supposed to
# be SemVer compatible, but it is better to be safe than sorry.
[dependencies]
libc = { version = "0.2.172", default-features = false }

[build-dependencies]
cc = "1.2.23"
bindgen = "0.71.1"

[profile.dev]
opt-level = 0


[profile.release]
opt-level = 3
