<?xml version="1.0"?>
<package format="2">
  <name>{{ros.package_name}}</name>
  <version>{{meta.version}}</version>
  <description>{{ros.description}}</description>
  <maintainer email="maintainer-email@todo.todo">chung</maintainer>
  <license>{{meta.licence}}</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Messages -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export></export>
</package>
